// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Linkbox /> spec external linkbox that is opened in to a new tab should not have any basic accessibility issues 1`] = `
<DocumentFragment>
  <div
    aria-label="Linkbox: HDS. Avautuu uudessa välilehdessä. Siirtyy toiseen sivustoon."
    class="linkbox"
    role="region"
    tabindex="0"
  >
    <div
      class="withBackground paddingWithoutImageAndWithBackground contentMedium"
    >
      <div
        aria-level="2"
        class="headingMedium"
        role="heading"
      >
        Linkbox title
      </div>
      <p
        class="text"
      >
        Linkbox text
      </p>
    </div>
    <a
      aria-label="HDS. Avautuu uudessa välilehdessä. Siirtyy toiseen sivustoon."
      class="link"
      href="https://hds.hel.fi"
      rel="noopener"
      tabindex="-1"
      target="_blank"
    >
      <svg
        aria-hidden="true"
        aria-label="link-external"
        class="icon large icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M5 3V19H21V21H3V3H5ZM21 3V12H19V6.413L9.91421 15.5L8.5 14.0858L17.585 5H12V3H21Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Linkbox /> spec renders the component 1`] = `
<DocumentFragment>
  <div
    aria-label="Linkbox: HDS."
    class="linkbox"
    role="region"
    tabindex="0"
  >
    <div
      class="withBackground paddingWithoutImageAndWithBackground contentMedium"
    >
      <div
        aria-level="2"
        class="headingMedium"
        role="heading"
      >
        Linkbox title
      </div>
      <p
        class="text"
      >
        Linkbox text
      </p>
    </div>
    <a
      aria-label="HDS."
      class="link"
      href="https://hds.hel.fi"
      tabindex="-1"
    >
      <svg
        aria-hidden="true"
        aria-label="arrow-right"
        class="icon large icon"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M14 5.5L12.5 7L16.5 11H4V13H16.5L12.5 17L14 18.5L20.5 12L14 5.5Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;
